--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@reduxjs/toolkit": "^2.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
